--- a/package.json
+++ b/package.json
@@ -38,43 +38,44 @@
     "@radix-ui/react-toggle": "^1.1.1",
     "@radix-ui/react-toggle-group": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.6",
+    "@supabase/supabase-js": "latest",
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
+    "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "lucide-react": "^0.482.0",
-    "next": "15.2.2",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "tailwind-merge": "^3.0.2",
-    "tailwindcss-animate": "^1.0.7",
-    "react-beautiful-dnd": "^13.1.1",
-    "react-hook-form": "^7.53.2",
-    "react-resizable-panels": "^2.1.3",
-    "uuid": "^11.1.0",
-    "vaul": "^0.9.6",
-    "zod": "^3.23.8",
     "cmdk": "1.0.4",
     "date-fns": "3.0.0",
     "embla-carousel-react": "8.5.1",
     "input-otp": "1.4.1",
+    "lucide-react": "^0.482.0",
+    "next": "15.2.2",
+    "next-themes": "^0.4.6",
+    "react": "^18.0.0",
+    "react-beautiful-dnd": "^13.1.1",
+    "react-day-picker": "8.10.1",
+    "react-dom": "^18.0.0",
+    "react-hook-form": "^7.53.2",
+    "react-resizable-panels": "^2.1.3",
     "recharts": "2.15.0",
     "sonner": "^1.7.1",
-    "@supabase/supabase-js": "latest",
-    "react-day-picker": "8.10.1",
-    "autoprefixer": "^10.4.20"
+    "tailwind-merge": "^3.0.2",
+    "tailwindcss-animate": "^1.0.7",
+    "uuid": "^11.1.0",
+    "vaul": "^0.9.6",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
+    "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-dom": "^19",
+    "@types/uuid": "^10.0.0",
     "eslint": "^9",
     "eslint-config-next": "15.2.2",
     "tailwindcss": "^4",
-    "typescript": "^5",
-    "@types/react-beautiful-dnd": "^13.1.8",
-    "@types/uuid": "^10.0.0"
+    "typescript": "^5"
   }
 }
